<<$Id: HISTORY,v 1.34 2008/06/28 13:07:23 mitch Exp $>>


gbsplay HISTORY


2008/xx/xx  -  0.0.9cvs
~~~~~~~~~~~~~~~~~~~~

Bugfixes:

- remove possible garbage sounds on songchange

Removals:

- gbsxmms:
  As it is currently broken and propably won't be fixed soon,
  building of the XMMS plugin is now disabled by default.
  If you want to try to fix it, use 'configure --with-xmmsplugin'

Enhancements:

- build process:
  - installation of contrib scripts is optional
  - remove bashishms from configure script


2008/06/21  -  0.0.9  (the Still Alive release)
~~~~~~~~~~~~~~~~~~~~

Bugfixes:

- muted channel settings were lost on subsong change

Enhancements:

- gbsplay:
  - allow channel mute on gbsplay startup
  - add ALSA plugout


2006/01/21  -  0.0.8
~~~~~~~~~~~~~~~~~~~~

Enhancements:

- code optimizations
  - use long instead of int where possible, better on 64bit archs
  - use const where possible

- gbsplay:
  - use blipbuffer-like sound generation (better quality)
  - optimizations to channel 2 (interpolation, dc offset)
  - NAS output honors requested endianess
  - translation fixes

- build process:
  - add regression test
  - better autotools compatibility (needs fewer tweaks in ebuild)
  - fix tar call in dist target for tar versions > 1.14
  - optimize symbol hash tables
  - use -fpic instead of -fPIC
  - better error message when CC is undefined


2004/07/16  -  0.0.7
~~~~~~~~~~~~~~~~~~~~

Enhancements:

- gbsplay:
  - don't use random() for noise, emulate the original Gameboy
    behaviour
  - support more verbosity levels than just "quiet"


2004/04/26  -  0.0.6
~~~~~~~~~~~~~~~~~~~~

Bugfixes:

- fix make errors on CygWin
- fix "make dist" on FreeBSD
- fix path errors in configure script

Enhancements:

- code optimizations (using regparm where available)

- include example song "Nightmode" by Laxity

- gbsplay:
  - include a NAS driver
  - repeat mode for infinite playmode
  - set screen refresh rate (refresh_delay)