@@ -1,4 +1,4 @@
-<<$Id: HISTORY,v 1.34 2008/06/28 13:07:23 mitch Exp $>>
+<<$Id: HISTORY,v 1.35 2008/06/28 13:27:34 mitch Exp $>>
 
 
 gbsplay HISTORY
@@ -22,6 +22,7 @@ Enhancements:
 
 - build process:
   - installation of contrib scripts is optional
+  - gbsplay test run is optional
   - remove bashishms from configure script
 
 
